--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,8 @@
 {
+  "script":{
+    "start": "node app.js",
+    "dev": "nodemon app.js"
+  },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
