--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,6 @@
 {
-  "script":{
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+  "scripts":{
+    "start": "nodemon app.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
